# mkkit2

./: .gitignore  01_実装計画.md  02_研究計画.md  echo_polarization.py  main.py  plots.py  pyproject.toml  verify_data.py
analysis/: 03_三層モデル分析.md  flow_diagram.py  network_metrics.py  parameter_table.py  persona_action_matrix.py  phase2_plot.py  vote_opinion_alignment.py
scripts/: phase_a.py
src/agent/: __init__.py  azure_provider.py  engine.py  llm.py  manager.py
src/analysis/: __init__.py  metrics.py  output.py  report.py
src/config/: personas.py  settings.py
src/core/: __init__.py  action.py  agent.py  params.py  proposal.py  state.py
src/engine/: __init__.py  simulation.py
src/governance/: __init__.py  base.py  stub.py
src/social/: __init__.py  graph.py  timeline.py
tests/: test_output.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py
