[project]
name = "mkkit2"
version = "0.1.0"
description = "Three-layer simulation platform for opinion dynamics"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "networkx>=3.2.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
